# vuurkorf-app

./: .gitignore  BRAND_GUIDE.md  README.md  vercel.json
api/: dxf.py  health.py  orders.py  preview.py  process.py  requirements.txt  upload.py
api/_lib/: dxf_generator.py  image_processor.py  pricing.py  svg_utils.py  template_integrator.py  validator.py  vectorizer.py
backend/: Dockerfile  pyproject.toml  render.yaml  requirements.txt  run.sh  start.sh  start_backend.sh  start_fast.sh
backend/app/: main.py  store.py
backend/app/models/: job.py  order.py
backend/app/routers/: orders.py  preview.py  process.py  upload.py
backend/app/services/: image_processor.py  pricing.py  template_integrator.py  validator.py  vectorizer.py
backend/app/utils/: svg_utils.py
frontend/: package-lock.json  package.json  run.sh  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/bevestiging/: page.tsx
frontend/app/configurator/: page.tsx
frontend/lib/: api.ts
